Set up llama.cpp as a submodule
Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>